syntax = "proto3";

option go_package = "./pbuser";

package user;

service User {
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  repeated SignInUser users = 1; 
}

message SignInUser {
  string token = 1;
  string role = 2;
  string name = 3;
  string surname = 4;
  string email = 5;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string role = 3;
  string name = 4;
  string surname = 5;
}

message SignUpResponse {
  SignInUser user = 1; 
}

